--- a/springmvc/src/main/webapp/WEB-INF/web.xml
+++ b/springmvc/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,11 @@
 	id="WebApp_ID" version="3.1">
 
 	<display-name>spring-mvc-demo</display-name>
+	
+	<welcome-file-list>
+	<welcome-file>index.jsp</welcome-file>
+	
+	</welcome-file-list>
 
 	<!-- Spring MVC Configs -->
 
